Fixed #4: Missing padding between field label and field value form

--- a/src/bundle/Resources/public/css/style.css
+++ b/src/bundle/Resources/public/css/style.css
@@ -1,3 +1,7 @@
+.ez-field-edit--ezdrawio .ez-field-edit-preview {
+    padding: 1.25rem 0 0.75rem 1.25rem;
+}
+
 .ez-field-edit-preview__action--edit {
     background: #106d95;
     border: 0 none;
